ajout de la javadoc et de la documentation de directioncourse du package observateur